
* SOLR-15101: Add "list" and "delete" APIs for managing incremental backups (Jason Gerlowski, shalin, Cao Manh Dat)

* SOLR-15038: Add elevateOnlyDocsMatchingQuery and collectElevatedDocsWhenCollapsing parameters to query elevation.
  (Dennis Berger, Tobias Kässmann via Bruno Roustant)

Optimizations
---------------------
* SOLR-15079: Block Collapse - Faster collapse code when groups are co-located via Block Join style nested doc indexing.
  Used by default when field=_root_, or explicitly requested for other fields via hint=block.  (Joel Bernstein, hossman)

* SOLR-15120 Reduce duplicated core creation work (Mike Drob, Mark Miller)

Bug Fixes
---------------------
* SOLR-15078: Fix ExpandComponent behavior when expanding on numeric fields to differentiate '0' group from null group (hossman)

* SOLR-15149: Better exception handling for LTR model creation errors (Alessandro Benedetti, Christine Poerschke)

* SOLR-13034: Partial (AKA Atomic) updates could encounter "LazyField" instances in the document
  cache and not know hot to deal with them when writing the updated doc to the update log.
  (David Smiley)


Other Changes
---------------------
* SOLR-15118: Deprecate CollectionAdminRequest.getV2Request(). (Jason Gerlowski)

==================  8.8.1 ==================

Bug Fixes
---------------------

* SOLR-15145: System property to control whether base_url is stored in state.json to enable back-compat with older SolrJ versions.
  (Timothy Potter)

* SOLR-15114: Fix bug that caused WAND optimization to be disabled in cases where the max score is requested (such as
  multi-shard requests in SolrCloud) (Naoto Minami via Tomás Fernández Löbbe)

* SOLR-15136: Reduce excessive logging introduced with Per Replica States feature (Ishan Chattopadhyaya)

* SOLR-15138: Collection creation for PerReplicaStates does not scale to large collections as well as regular collections
  (Mike Drob, Ilan Ginzburg, noble, Ishan Chattopadhyaya)
